cloudcostlens2- changed ui/ux and integrate working terraform service