@@ -7,27 +7,33 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
- * CORS configuration to allow frontend access
+ * CORS configuration — allows Vite dev server and common local ports.
  */
 @Configuration
 public class CorsConfig {
-    
+
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        
+
         config.setAllowCredentials(true);
         config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://localhost:3000"
+            "http://localhost:5173",   // Vite default
+            "http://localhost:5174",   // Vite secondary
+            "http://localhost:3000",   // CRA / other
+            "http://127.0.0.1:5173",
+            "http://127.0.0.1:3000"
         ));
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setExposedHeaders(List.of("Content-Type", "Authorization"));
+
         source.registerCorsConfiguration("/api/**", config);
         return new CorsFilter(source);
     }
 }
+
